samples/_failures_safe/1761442906_4acf44_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_dedbdda4.c: In function ‘event_to_string’:
./samples/SAFE/__tmp_dedbdda4.c:155:5: error: expected identifier or ‘(’ at end of input
  155 |     static
      |     ^~~~~~
./samples/SAFE/__tmp_dedbdda4.c:155:5: error: expected declaration or statement at end of input
